--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
+    "@jitsi/react-sdk": "^1.4.4",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.5.3",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.13.1",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "next": "^14.2.5",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
